@@ -1,12 +1,21 @@
 AUX eric-snapshot-no-interactive.patch 600 RMD160 2d2d8481552fac4cb40d861385db9cfe0228bfce SHA1 4d17e20d2bdff0237462f9e7a3454ccbd0f42d2a SHA256 0fbfedef34e3742892f001ba05d27f846861074cbc6ad50ea63daeee222bf688
 DIST eric4-4.4-snapshot-20090523.tar.gz 6652436 RMD160 12328d59ab5ba60c8b581de16baee374f05eb93a SHA1 9f2274c484f428fe1172ce8cd764942f564a0fdc SHA256 b6ba48c04c995cc9c06594d87a3aea618997e2eef3d34635a86b08f3d158c64b
+DIST eric4-4.4-snapshot-20090627.tar.gz 6579081 RMD160 1ba2dd40b118feccd9a63c27176f59931b77e44e SHA1 d96e3a4f912731de20e6ab3436d282c4e437e388 SHA256 4cb56306f89775c0f489508a0ae06a443201808c40241c5fedb5ba3455d087c5
 DIST eric4-i18n-cs-4.4-snapshot-20090523.tar.gz 413114 RMD160 2f2e6c2c8a390c53157190060756fd58471a3b52 SHA1 c385c4d5fe44506f813d091125a17aa8bd693dec SHA256 ab34bc39429e3b7858f9bd3b32e5dc4ac7d80e43444e1c578ea4bf806963ada1
+DIST eric4-i18n-cs-4.4-snapshot-20090627.tar.gz 414073 RMD160 9b95f011abde07ba6d1c45bd2f9cdf3276d301ae SHA1 354d31ff5d28c343f6ef6585f2e6d05c5f742c18 SHA256 e40e7e4cad37257a988622887405e00d8c114b8fc29833dad4347d11297002a5
 DIST eric4-i18n-de-4.4-snapshot-20090523.tar.gz 418079 RMD160 f2f8fdaef42f18d91aeaf737a2af83d61bd8241f SHA1 a9495317e90a5b60e40e68a0f75c2283d91c0e12 SHA256 bb10dbf26ebc4c9d3a0a7907bb61bf932ba8415406bfe8934701ec9900fd016b
+DIST eric4-i18n-de-4.4-snapshot-20090627.tar.gz 421395 RMD160 71b4dcb8f28cf6671cdc76fb4c586cc10d691532 SHA1 db158e71c36c39079c4192405fd04743b3c10f7c SHA256 ec4f7455267c6f550d94a4fa90f5266b7bfe47f2ae16a4ccd3c521bd9c2643cc
 DIST eric4-i18n-es-4.4-snapshot-20090523.tar.gz 415785 RMD160 37e106a1a38ffd73fd4867847bd8e962c63124a4 SHA1 8688edd5977691e5985abdbcb72965ea9e0f6987 SHA256 8fab8271e16bfeff082cce21d52b6f13903cbaf365b4cf44525fbe897a04b739
+DIST eric4-i18n-es-4.4-snapshot-20090627.tar.gz 424480 RMD160 860b907824edd3e63c1281eef714b32e3441b06d SHA1 ba9a37510b3f7d46a5fae0bfed276edf2c389e19 SHA256 076dc42a76935e6f44500249273046d9e8a8e1581efd2328e7254cd550595234
 DIST eric4-i18n-fr-4.4-snapshot-20090523.tar.gz 415495 RMD160 f603612924e57ea8a312d91d7147e065d260907e SHA1 b7b25d5a5b37f57ba21e2edc3889c353e6c2dccf SHA256 1a035241ff9cf91a65fbe9a94d7572024b4e7d0c1602f0a2f6f0955e61ad50c8
+DIST eric4-i18n-fr-4.4-snapshot-20090627.tar.gz 416783 RMD160 ad49b0580622d818d547d10118da23a516008af0 SHA1 9de14909ba87389428289f4dc241fe3c483f0fa8 SHA256 13e3893fbe7d4f6cae12dc017393665db52d242f4eedb2b4c96982677fa4455e
 DIST eric4-i18n-ru-4.4-snapshot-20090523.tar.gz 406104 RMD160 d70f06abd94a3f53df51fe4488cfa36124d063df SHA1 a52a8b03d91edcab0afbc9ee48119d409f144f33 SHA256 a368cdbba3903bddb6d72e7f8027f17d552139bde61f46a18c0bac7779bc4cc8
+DIST eric4-i18n-ru-4.4-snapshot-20090627.tar.gz 407131 RMD160 83cd56eebdf379df8e95cb0109e3e1e25e5d4e1d SHA1 2aaf2014ba11a6883d73552337b8b5d96141b08c SHA256 3aaa4ae019282fe32128f6302179b63bd4534857515ae9d0e14e3b011f24fe46
 DIST eric4-i18n-tr-4.4-snapshot-20090523.tar.gz 372041 RMD160 b1e529714c68a09417b3e84da0551e4ca38a0028 SHA1 0736e979e5481151ebde7e7f774747250001302c SHA256 c83e54ae8ff82473f7b2b19c1fbe045aef11cef1eee671eb56be6e0ca4b01294
+DIST eric4-i18n-tr-4.4-snapshot-20090627.tar.gz 372900 RMD160 049d70c0f5b42736075ec550ac8e29ad8f147d7f SHA1 e0c354970b3d6bf70c856d0a997bf89a63c498b5 SHA256 a504ddb983117d152706119eb1d2348812554df751d5af39687c437af0e330be
 DIST eric4-i18n-zh_CN.GB2312-4.4-snapshot-20090523.tar.gz 377099 RMD160 47fa285efd49a2635d1bc5a072f8f83aa8d4f63e SHA1 c7ad4fe681193d764b848917c0f7b500f5a618e4 SHA256 a035a69610229dde394e9c556ce17b07b8f05dd8375483e85136b669e718848c
+DIST eric4-i18n-zh_CN.GB2312-4.4-snapshot-20090627.tar.gz 378523 RMD160 1dd6a4125a03e0fb94444ca9afda3b7a5293adb9 SHA1 b60536681563555d3d2ca380131fb35356ae7fcd SHA256 0afb98507c7b0313f15ed34db7764ec71ee6ba2f45855711341fcc76f805e68a
 EBUILD eric-4.4_pre20090523.ebuild 2531 RMD160 54ceae1112716e63b58e5cf8be6f2a7846c1005b SHA1 b0e0cde49d9c468cb1005d7dbb1c2a3f9cfcdec5 SHA256 93e7c3b2816af25ff4bcfd0a5d50474852c24a632e61ccce0a4bfb42cbe813ac
-MISC ChangeLog 1147 RMD160 ed4889d308a66009a57e7831071f4b810bff2f37 SHA1 cdf7d01dccc84e2be2984cd423999ee36ccb0a29 SHA256 98b23f5fffd397cc930f5818dfc508dd03efc129ff7502b9553e451be3527b0a
+EBUILD eric-4.4_pre20090627.ebuild 2531 RMD160 54ceae1112716e63b58e5cf8be6f2a7846c1005b SHA1 b0e0cde49d9c468cb1005d7dbb1c2a3f9cfcdec5 SHA256 93e7c3b2816af25ff4bcfd0a5d50474852c24a632e61ccce0a4bfb42cbe813ac
+MISC ChangeLog 1285 RMD160 081a6ddd6caac5618dd71894cf596db83cb0cbd0 SHA1 5a4251702e7265153b3fca4bed96fc680d51ab3d SHA256 955309e9e58ec1690ca58ca63e5b318c4c7eadf1f3c5170496027f9335682a47
 MISC metadata.xml 179 RMD160 887c899594fdaa3d82028c3d84188354d3784cd9 SHA1 551c6b2378ff31eadc1e4860211ec8709ce960bd SHA256 1fbdee58e0ba0f8730f6a27979cb7eeed8ebd3afa316d61b34a5f4893291a646
